--- a/README
+++ b/README
@@ -16,7 +16,7 @@ With "Fields permissions plugin" you can enable/disable the view of 5 fields for
 
 Italiano:
 
-Con il plugin "Fields permissions" è possibile abilitare/disabilitarela vista di 5 campi agli utenti o dei gruppi:
+Con il plugin "Fields permissions" è possibile abilitare/disabilitare la vista di 5 campi agli utenti o a gruppi di utenti:
 
 - Assegnato
 - Data Inizio
